<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/background_gray4"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/white_background"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/btn_create_pic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim_10"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/desc"
                    android:background="@drawable/ui_button_transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pictureselect"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_marginBottom="@dimen/dim_10"
                    android:layout_marginLeft="@dimen/dim_10"
                    android:layout_marginRight="@dimen/dim_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/editTextTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_holo_light"
                        android:ems="10"
                        android:hint="@string/txt_title"
                        android:textColor="@color/gray_35"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_46"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dip"
                    android:layout_marginBottom="@dimen/dim_10"
                    android:layout_marginLeft="@dimen/dim_10"
                    android:layout_marginRight="@dimen/dim_10"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/editTextDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_holo_light"
                        android:ems="10"
                        android:hint="@string/txt_description"
                        android:textColor="@color/gray_35"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>