<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/lightgreybackgroundrepeat"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ab_height"
        android:background="@color/gray_35" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageButton
                android:id="@+id/btn_backEP"
                android:layout_width="@dimen/width"
                android:layout_height="fill_parent"
                android:background="@color/gray_35"
                android:contentDescription="@string/desc"
                android:src="@drawable/ico_left" />

            <LinearLayout
                android:layout_width="@dimen/dim_1"
                android:layout_height="fill_parent"
                android:background="@color/purple" >
            </LinearLayout>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:tag="bold"
                android:text="user"
                android:textColor="@color/white"
                android:textSize="@dimen/tex_size_xxxlarge"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="@dimen/dim_1"
                android:layout_height="fill_parent"
                android:background="@color/purple" >
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_confirmEP"
                android:layout_width="@dimen/width"
                android:layout_height="fill_parent"
                android:background="@color/gray_35"
                android:contentDescription="@string/desc"
                android:src="@drawable/ico_check" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dim_1"
        android:background="@color/purple" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_background_simple"
            android:orientation="vertical"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ico_bio" />

                <EditText
                    android:id="@+id/editTextBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_holo_light"
                    android:ems="10"
                    android:hint="@string/txt_bio"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewTagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ico_tagline" />

                <EditText
                    android:id="@+id/editTextTagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_holo_light"
                    android:ems="10"
                    android:hint="@string/txt_tagline"
                    android:inputType="textPersonName" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_background_simple"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ico_password_lock" />

                <EditText
                    android:id="@+id/editTextChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_holo_light"
                    android:ems="10"
                    android:hint="@string/txt_password1"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewChangePassword2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ico_password_lock" />

                <EditText
                    android:id="@+id/editTextChangePassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_holo_light"
                    android:ems="10"
                    android:hint="@string/txt_password2"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>