<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/ab_height"
            android:background="@drawable/actionbar_purple">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/width"
                    android:layout_height="fill_parent"
                    android:background="@drawable/selectable_background_actionbar"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ico_left"/>

            <LinearLayout
                    android:layout_width="@dimen/dim_1"
                    android:layout_height="fill_parent"
                    android:background="@color/gray_35">
            </LinearLayout>

            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/event_banner"/>

            <LinearLayout
                    android:layout_width="@dimen/dim_1"
                    android:layout_height="fill_parent"
                    android:background="@color/gray_35">
            </LinearLayout>

            <ImageButton
                    android:id="@+id/btn_refresh"
                    android:layout_width="@dimen/width"
                    android:layout_height="fill_parent"
                    android:background="@drawable/selectable_background_actionbar"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ico_replay"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/gray_35">
    </LinearLayout>

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/image"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dim_10"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/desc"
                        android:scaleType="fitCenter"
                        android:src="@drawable/brave"/>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:layout_marginBottom="@dimen/dim_10"
                        android:layout_marginLeft="@dimen/dim_10"
                        android:layout_marginRight="@dimen/dim_10"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/text_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:tag="bold"
                            android:text="@string/txt_some_title"
                            android:textColor="@color/purple"
                            android:textSize="@dimen/tex_size_xxlarge"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/text_time"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:singleLine="true"
                            android:tag="bold"
                            android:text="@string/txt_some_time"
                            android:textColor="@color/purple"
                            android:textSize="@dimen/tex_size_xxlarge"
                            android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/gray_189"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                </LinearLayout>

                <TextView
                        android:id="@+id/text_desc"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dim_10"
                        android:text="@string/txt_some_longtext"
                        android:textColor="@color/gray_79"
                        android:textSize="@dimen/tex_size_normal"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                <ImageButton
                        android:id="@+id/btn_friendchooser"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/white_background_selector"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/ico_friends"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>